agrego imagen para el index

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,8 +8,21 @@
     <meta name="keywords" content="restaurantVermont, react, javascript, js" />
     <meta name="author" content="Grupo 3" />
     <title>Restaurant Vermont</title>
-</head>
-<body>
-    <h1>Bienvenidos al Backend del Restaurant Vermont</h1>
-</body>
+    <link rel="stylesheet" href="./index.css">
+  </head>
+  <body>
+    <section>
+      <h1>Bienvenidos al Backend del Restaurant Vermont</h1>
+      <a
+        href="https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg"
+        target="_blank"
+      >
+        <img
+          src="https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg"
+          alt="restaurantVermont"
+          style="width: 100%"
+        />
+      </a>
+    </section>
+  </body>
 </html>
