--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,16 @@
     <link rel="stylesheet" href="./index.css">
   </head>
   <body>
-    <section>
-      <h1>Bienvenidos al Backend del Restaurant Vermont</h1>
-      <a
-        href="https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg"
-        target="_blank"
-      >
-        <img
+    <section>    
+     <h1>Bienvenidos al Backend del Restaurant Vermont</h1>
+     <img
           src="https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg"
           alt="restaurantVermont"
           style="width: 100%"
         />
-      </a>
+        <h3>Visitanos en nuestro Sitio Oficial:</h3>
+        <a href="https://vermont-restaurant.netlify.app/">https://vermont-restaurant.netlify.app/</a>
+      
     </section>
   </body>
 </html>
